--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,15 +18,7 @@ dynamic = [
 readme = "README.rst"
 requires-python = ">=3.10"
 dependencies = [
-    "numpy>=1.21.6",
-    "scipy>=1.5.0",
-    "matplotlib>=3.2.0",
-    "astropy>=5.1.0",
-    "photutils>=1.10.0",
-    "poppy>=1.0.0",
-    "pysiaf>=0.23.3",
-    "synphot>=1.0.0",
-    "astroquery>=0.4.6",
+    "stpsf>=1.5.2"
 ]
 
 [project.license]
