--- a/tox.ini
+++ b/tox.ini
@@ -1,22 +1,7 @@
 [tox]
-envlist =
-    py{310,311,312}-test
+envlist = docbuild
 
 isolated_build = true
-
-[testenv]
-passenv = *
-deps =
-    pytest
-    pytest-astropy
-conda deps =
-    scipy
-    matplotlib
-    cython
-    photutils
-    astroquery
-commands=
-    test: pytest {posargs}
 
 [testenv:docbuild]
 passenv= *
@@ -34,15 +19,3 @@ conda_deps=
     pandoc
 commands=
     sphinx-build docs docs/_build
-
-[testenv:codestyle]
-skip_install = true
-description = check package code style
-deps =
-    pycodestyle
-commands =
-    pycodestyle webbpsf
-
-[testenv:flake8]
-exclude= .git,__pycache__, test*
-max-line-length = 120
