add tests back to ci_workflows

--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,7 @@ envlist =
     py{310,311,312}-test
     py{310,311,312}-{poppydev,pysiafdev,astropydev,latest,stable}-test
     py310-legacy-test
+    py{310,311,312}-{poppydev,pysiafdev}-cov
 
 isolated_build = true
 
@@ -24,6 +25,8 @@ deps =
     latest: -rrequirements.txt
     stable: poppy
     stable: pysiaf
+    cov: pytest-cov
+    cov: coverage
 conda deps =
     scipy
     matplotlib
