--- a/.github/workflows/ci_workflows.yml
+++ b/.github/workflows/ci_workflows.yml
@@ -15,12 +15,36 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          - name: Coverage test in Python 3
+            os: ubuntu-latest
+            python: '3.11'
+            toxenv: py311-poppydev-pysiafdev-cov
 
           - name: Check for Sphinx doc build errors
             os: ubuntu-latest
             python: '3.10'
             toxenv: docbuild
 
+          - name: Try Astropy development version
+            os: ubuntu-latest
+            python: '3.10'
+            toxenv: py310-astropydev-test
+
+          - name: Try latest versions of all dependencies
+            os: ubuntu-latest
+            python: '3.11'
+            toxenv: py311-latest-test
+
+          - name: Try minimum supported versions
+            os: ubuntu-latest
+            python: '3.10'
+            toxenv: py310-legacy-test
+
+          - name: Try released POPPY and PySIAF
+            os: ubuntu-latest
+            python: '3.10'
+            toxenv: py310-stable-test
+            continue-on-error: 'true'
     steps:
     - name: Checkout code
       uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938  # v4.2.0
