temp check for tox update

--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,7 @@ isolated_build = true
 [testenv]
 setenv =
     astropydev: PIP_EXTRA_INDEX_URL = https://pypi.anaconda.org/astropy/simple
+    PYTHONPATH={toxinidir}  # TODO TEMP
 passenv = *
 deps =
     pytest
@@ -34,7 +35,8 @@ conda deps =
     photutils
     astroquery
 commands=
-    test: pytest {posargs}
+    test: pytest --import-mode=importlib {posargs} # TODO TEMP
+    # test: pytest
 
 [testenv:docbuild]
 passenv= *
