--- a/.github/workflows/ci_workflows.yml
+++ b/.github/workflows/ci_workflows.yml
@@ -15,10 +15,10 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - name: Try latest versions of all dependencies
+          - name: Try Python 311
             os: ubuntu-latest
             python: '3.11'
-            toxenv: py311-latest-test
+            toxenv: py311-test
     steps:
     - name: Checkout code
       uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938  # v4.2.0
