--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ conda deps =
     photutils
     astroquery
 commands=
-    test: pytest tests/test_psfgrid.py
+    test: pytest tests/test_webbpsf_stpsf_alias.py
     # test: pytest
 
 [testenv:docbuild]
