another take with a setenv

--- a/tox.ini
+++ b/tox.ini
@@ -7,15 +7,11 @@ isolated_build = true
 [testenv]
 deps =
     pytest
-    pytest-astropy
-conda deps =
-    scipy
-    matplotlib
-    cython
-    photutils
-    astroquery
+    -e .
+setenv =
+    PYTHONPATH = {toxinidir}
 commands=
-    test: PYTHONPATH=$(pwd) pytest --import-mode=importlib tests/test_webbpsf_stpsf_alias.py
+    pytest --import-mode=importlib tests/test_webbpsf_stpsf_alias.py
     # test: pytest
 
 [testenv:docbuild]
