--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ deps =
 setenv =
     PYTHONPATH = {toxinidir}
 commands=
-    pytest --import-mode=importlib tests/test_webbpsf_stpsf_alias.py
+    test: pytest --import-mode=importlib tests/test_webbpsf_stpsf_alias.py
     # test: pytest
 
 [testenv:docbuild]
