--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,1 @@
-astropy>=6.1.2,<7.1.0
-ipython>=8.27.0,<8.31.0
-matplotlib>=3.9.1,<3.10.0
-numpy>=2.1.0,<2.2.0
-photutils>=1.13.0,<2.1.0
-poppy>=1.0.0
-pysiaf>=0.23.3,<0.25.0
-scipy>=1.14.0,<1.15.0
-synphot>=1.4.0,<1.6.0
-astroquery>=0.4.7,<0.5.0
+stpsf>=1.5.2
